--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -57,6 +57,7 @@
 header {
   border-bottom: 1px solid $gray-200;
   width: 100%;
+  margin-bottom: 50px;
   position: relative;
   font-family: "Poppins", sans-serif;
 }
