--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -112,7 +112,12 @@ section {
 }
 
 .card {
-  height: 100%;
+  &.bordered {
+    border: 1px solid $gray-200;
+  }
+  border-radius: 15px;
+
+  // height: 100%;
   // border-radius: 15px;
 
   .tag {
@@ -246,5 +251,13 @@ footer {
     margin: 50px 0;
     font-weight: 300;
     color: $gray-500;
+  }
+}
+
+main {
+  p {
+    color: $gray-500;
+    font-weight: 300;
+    font-size: 18px;
   }
 }
